# cochrane

./: .dockerignore  .gitignore  .just-env  Cargo.toml  justfile
.github/workflows/: build.yaml  infra.yaml
.sqlx/: query-7e1b7a6563ebaf21a3daa7f1307add673706f596e357fc8763a2696fdd9dbfaa.json
backend/: Cargo.toml  Dockerfile  justfile
backend/src/: config.rs  database.rs  main.rs  state.rs
frontend/: Cargo.toml  Dioxus.toml  Dockerfile  docker-entrypoint.sh  justfile
frontend/src/: main.rs
infra/: .terraform.lock.hcl  justfile  main.tf  terraform.tfvars.tpl
local-dev/: compose.yaml  justfile
