[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
axum-macros = "0.4.1"
config = "0.13.4"
getset = "0.1.2"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.195", features = ["rc"] }
sqlx = { version = "0.7.3", default-features = false, features = ["postgres", "macros", "migrate", "json", "runtime-tokio"]}
tokio = { version = "1.34.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors"] }
