[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = "0.4.3"
dioxus-fullstack = "0.4.3"
dioxus-core-macro = "0.4.3"
reqwest = "0.11.22"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tracing = "0.1.39"
tracing-subscriber = "0.3.17"
url = { version = "2.5.0", features = ["serde"] }
wasm-bindgen = "0.2.87"

[features]
default = []
ssr = ["dioxus-fullstack/axum"]
web = ["dioxus-fullstack/web"]
